--- a/src/index1.html
+++ b/src/index1.html
@@ -2,13 +2,251 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Description" content="完美商城，完美官方实物商城，提供完美游戏周边一站式购物平台，更多限时折扣，绝版手办，秒杀优惠，尽在完美商城，支持支付宝、网银等各种支付方式，即时发货，提供安全交易保障，让您安心享受购物乐趣！">
+    <meta name="Keywords" content="完美商城,周变商城,实物商城,完美游戏,神秘商店,授权正品,手办,主机周边,Xbox,打折,优惠,dota2,诛仙3,神雕侠侣,御天降魔传">
+    <title>完美世界</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    这里就是首页
+    <!-- 头信息 -->
+    <div class="header">
+        <div class="wrap">
+            <span class="welcome">欢迎来到完美世界周边商城！</span>
+            <div class="header-cart">
+                <a href="cart.html" class="text"><span class="icon"></span>购物车（<span class="cartNum">0</span>）</a>
+                <div class="cart_list"></div>
+            </div>
+            <dl>
+                <dt><a href="#" class="">我的订单</a></dt>
+                <dd><a href="#" class="">我的关注</a></dd>
+            </dl>
+            <dl class="userlogin">
+                <dt><a href="" class="">登录</a></dt>
+                <dd><a href="http://passport.wanmei.com/reg/?o=http%3A%2F%2Fshop.wanmei.com" target="_blank">注册</a></dd>
+            </dl>
+        </div>
+    </div>
+
+
+    <!-- 右侧悬浮条 -->
+    <div class="rightfloor">
+        <dl>
+            <dd class="center">
+                <a href="#"><span></span></a>
+            </dd>
+            <dd class="my_like">
+                <a href="#"><span></span></a>
+            </dd>
+            <dd class="right-cart">
+                <a href="cart.html"><span><i></i>购物车<font class="cartNum">0</font></span></a>
+            </dd>
+            <dd class="online">
+                <a href="#"><span></span></a>
+            </dd>
+        </dl>
+        <p class="go_top"><a href="#"><span></span></a></p>
+    </div>
+
+    <!-- 导航nav -->
+    <div class="nav">
+        <div class="wrap">
+            <a href="" class="logo_wm"><img src="http://static.wanmei.com/shop/images/logo_wm.png" alt="" title="完美世界"></a>
+            <a href="" class="logo_shop"><img src="http://static.wanmei.com/shop/images/logo_shop.png" alt="" title="完美商城"></a>
+
+            <div class="all-goods">
+                <p class="text"><span></span>全部商品</p>
+                <ul>
+                    <li>
+                        <a href="" class="ellipsis2">DOTA2神秘商店</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2" title="完美世界周边">完美世界周边</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2">CSGO正版周边</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2">姜小虎系列周边</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2"> 游戏外设</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2">神魔大陆手游</a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipsis2">手作</a>
+                    </li>
+                </ul>
+            </div>
+
+            <ul class="nav1">
+                <li><a href="#">首页</a></li>
+                <li><a href="#">完美世界周边</a></li>
+                <li><a href="http://secretshop.dota2.com.cn/" target="_blank">DOTA2专区</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+
+            <div class="nav-search">
+                <form action="" method="get" class="cf">
+                    <input type="text" class="text" value="">
+                    <input type="button" class="btn">
+                    <span class="keyword">
+
+                        <a href="#" class="tj_link" >武林手机支架</a>
+
+                    </span>
+                    <div class="keyword_list">
+                        <dl>
+
+                        </dl>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- 轮播图 -->
+    <div class="banner">
+        <div class="temp-wrap">
+            <img src="http://img.shop.wanmei.com/upload/ad/2019-05-30/aa8e00881c05407b81c386a494fe8c69.jpg" alt="">
+        </div>
+    </div>
+
+    <!-- ad图片 -->
+    <div class="ad">
+        <div class="ad-list">
+            <a href="#" class="in tj_link"><img src="http://img.shop.wanmei.com/upload/ad/2018-08-30/58c1278cc6e54670ab72d6f9b9b3f235.jpg"></a>
+
+            <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2019-02-25/a0d5b5ec5f284a04b84efb5c9d937817.jpg"></a>
+
+            <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2019-01-04/c276224a840b45ffb81d04a457f689d1.jpg"></a>
+        </div>
+    </div>
+
+    <!-- 周边专区 -->
+    <!-- Dota2神秘商店 -->
+    <div class="area-dota2 ">
+        <div class="temp-wrap">
+            <div class="dota2-title">
+                <p class="f-left">
+                    <span class="icon"><img src="http://img.shop.wanmei.com/upload/moduleIcon/2016-08-22/46a762db-d63e-4c6e-9d63-0bbb986905ba.jpg"></span> Dota2神秘商店
+                </p>
+                <dl class="f-left">
+                    <dd link="https://www.dota2.com.cn/intern            cational/2018/secretshop/" class="on">
+                        Dota2周边推荐
+                    </dd>
+                </dl>
+                <a href="#" class="more">更多<span></span></a>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- 完美世界游戏周边 -->
+    <div class="area-wm ">
+        <div class="temp-wrap ">
+
+        </div>
+    </div>
+
+    <!-- CSGO正版周边 -->
+    <div class="area-csgo ">
+        <div class="temp-wrap">
+
+        </div>
+    </div>
+
+    <!-- 姜小虎周边专区 -->
+    <div class="area-jxh ">
+        <div class="temp-wrap">
+
+        </div>
+    </div>
+
+    <!-- 玩家热评 -->
+    <div class="area-hot">
+        <div class="temp-wrap">
+
+        </div>
+    </div>
+
+    <!-- 关于 -->
+    <div class="about">
+        <div class="wrap">
+            <ul>
+                <li class="goods"><span></span>正品保证</li>
+                <li class="shopping"><span></span>轻松购物</li>
+                <li class="fast"><span></span>快速配送</li>
+                <li class="return"><span></span>无忧退换</li>
+            </ul>
+            <div class="link">
+                <dl>
+                    <dt>购物指南</dt>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">订单状态</a></dd>
+                    <dd><a href="">购物流程</a></dd>
+                    <dd><a href="">支付方式</a></dd>
+                </dl>
+                <dl>
+                    <dt>售后服务</dt>
+                    <dd><a href="#">退换货政策</a></dd>
+                    <dd><a href="#">发票政策</a></dd>
+                </dl>
+                <dl>
+                    <dt>关注我们</dt>
+                    <dd><a href="">公司官网</a></dd>
+                    <dd>
+                        <a href="#">商务合作</a>
+                        <div class="tip">
+                            <i></i>
+                            <p>联系人：张女士</p>
+                            <p>邮箱：<span>zhangchenrui@pwrd.com</span></p>
+                            <p>联系电话：<span>010-57805531</span></p>
+                        </div>
+                    </dd>
+                </dl>
+
+                <div class="contact">
+                    <p class="tel">028-68723699</p>
+                    <p class="time">周一至周日 9:00-22:00</p>
+                    <a class="kf" href="#"><span></span>在线客服</a>
+                    <a href="#" class="tsjb" style="color:#474747">投诉举报</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 版权 -->
+    <div class="copyright">
+        <div class="wrap">
+            <ul>
+                <li><a href="#">公司介绍</a></li>
+                <li><a href="#">开发团队</a></li>
+                <li><a href="#">招聘信息</a></li>
+                <li><a href="#">联系我们</a></li>
+                <li style="width: 110px"><a href="#">完美世界隐私政策</a></li>
+                <li style="width: 110px"><a href="#">完美世界用户协议</a></li>
+                <li style="width: 110px"><a href="#">完美商城服务协议</a></li>
+                <li style="width: 75px"><a href="#">Cookie政策</a></li>
+                <li><a href="#">纠纷处理</a></li>
+                <li><a href="#">网站地图</a></li>
+            </ul>
+            <p class="text">
+                京ICP证：050016号 <a href="#">营业执照</a> 《网络文化经营许可证》编号：文网文【2017】8929-1007号《网络视听许可证》编号：0110587 京公网安备11010502033859号
+                <br> ©完美世界 版权所有　Perfect World. All Rights Reserved.
+            </p>
+            <div class="link">
+                <a href="#"><img src="http://static.wanmei.com/shop/images/copyright01.jpg"></a>
+                <a href="#"><img src="http://static.wanmei.com/shop/images/copyright02.jpg"></a>
+                <a href="#"><img src="http://static.wanmei.com/shop/images/copyright03.jpg"></a>
+                <a href="#"><img src="http://static.wanmei.com/shop/images/copyright04.jpg"></a>
+                <a href="#"><img src="http://static.wanmei.com/shop/images/copyright05.jpg"></a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
