--- a/src/index.html
+++ b/src/index.html
@@ -111,17 +111,12 @@
             </ul>
 
             <div class="f_right header_search">
-                <form action="" method="get" class="cf">
+                <form action="" method="get" class="formsearch">
                     <input type="text" class="text">
                     <input type="button" class="btn">
                     <span class="keyword">
                         <a href="list.html" class="tj_link" target="_blank">武林手机支架</a>
                     </span>
-                    <div class="keyword_list">
-                        <dl>
-
-                        </dl>
-                    </div>
                 </form>
             </div>
         </div>
@@ -130,7 +125,34 @@
     <!-- 轮播图 -->
     <div class="banner">
         <div class="temp-wrap">
-            <img src="http://img.shop.wanmei.com/upload/ad/2019-05-30/aa8e00881c05407b81c386a494fe8c69.jpg" alt="">
+            <ul>
+                <!-- 图片 -->
+                <li>
+                    <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2019-05-30/aa8e00881c05407b81c386a494fe8c69.jpg" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2019-11-26/e49777a95329481da2adab2ed2bfeb74.jpg" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2018-12-26/0cb9ca00e3a9451a9aee4a961527051d.jpg" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="http://img.shop.wanmei.com/upload/ad/2019-05-30/aa8e00881c05407b81c386a494fe8c69.jpg" /></a>
+                </li>
+            </ul>
+            <!-- 小圆圈 -->
+            <ol>
+                <li class="active">1</li>
+                <li>1</li>
+                <li>1</li>
+            </ol>
+            <!-- 左右箭头 -->
+            <a href="javascript:;" id="bleft">
+                <span></span>
+            </a>
+            <a href="javascript:;" id="bright">
+                <span></span>
+            </a>
         </div>
     </div>
 
@@ -161,7 +183,7 @@
                         Dota2周边推荐
                     </a>
                 </div>
-                <a href="#" class="f_right more">更多<span></span></a>
+                <a href="list.html" class="f_right more">更多<span></span></a>
             </div>
             <div class="content_main">
                 <a href="#" class="ad"><img src="http://img.shop.wanmei.com/upload/moduleCover/2017-06-28/93f67a9f-09aa-473a-9dda-da8add66db93.jpg" alt="" width="226" height="614"></a>
@@ -185,16 +207,10 @@
                             </div>
                         </div>
                         <div class="right-m">
-                            <div class="add">
-                                <a class="star stars0" href="/product/243" target="_blank"></a>
-                                <a href="detail.html" class="btn" target="_blank"><span></span>加入购物车</a>
-                            </div>
+
                         </div>
                         <div class="main">
-                            <div class="add">
-                                <a class="star stars0" href="/product/243" target="_blank"></a>
-                                <a href="detail.html" class="btn" target="_blank"><span></span>加入购物车</a>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -225,7 +241,7 @@
                                 <a href="#" class="on"><img src="../src/img/dist.png" alt=""></a>
                             </div>
                             <div class="bd">
-                                <div class="bdWrap">
+                                <div ·1class="bdWrap">
                                     <ul>
                                         <li>
                                             <img src="http://img.shop.wanmei.com/upload/moduleScroll/2016-07-25/b24a4280-eb2a-4cc6-ba6e-97a97dde6c9c.jpg" alt="">
@@ -236,11 +252,10 @@
                                 <a class="bdrarrow"><span></span></a>
                             </div>
                         </div>
-                        <div class="right-m"></div>
+                        <div class="right-m">
+
+                        </div>
                         <div class="main">
-
-
-
                         </div>
                     </div>
                 </div>
