--- a/src/login.html
+++ b/src/login.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    这里就是首页
+    <fieldset style="width:800px;margin:0 auto;">
+        <legend>用户登录</legend>
+        <form action="">
+            <p><label for="">用户姓名：</label><input type="text" class="username"></p>
+            <p><label for="">用户密码：</label><input type="password" class="password"></p>
+            <p><input type="button" value="用户登录" class="btn"> <a href="registry.html">用户注册</a></p>
+        </form>
+    </fieldset>
 </body>
 
 </html>
