--- a/src/registry.html
+++ b/src/registry.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-    这里就是首页
+    <fieldset style="width:800px;margin:0 auto;">
+        <legend>用户注册</legend>
+        <form action="http://192.168.13.66/projectname/php/registry.php" method="post">
+            <p><label for="">用户姓名：</label><input type="text" name="username" class="username"><span></span></p>
+            <p><label for="">用户密码：</label><input type="password" name="password"></p>
+            <p><label for="">确认密码：</label><input type="password" name="repass"></p>
+            <p><label for="">用户邮箱：</label><input type="text" name="email"></p>
+            <p><input type="submit" value="用户注册" name="submit"></p>
+        </form>
+    </fieldset>
 </body>
 
 </html>
