列表页完成

--- a/src/list.html
+++ b/src/list.html
@@ -117,29 +117,29 @@
             </div>
         </div>
     </div>
-    <!-- 悬浮导航 -->
-    <div class="fixed_nav">
-        <p class="to">
 
-            <a href="#tab94" style="background-color:#7976ab" class="">梦间集周边</a>
+    <!-- 分页排序 -->
+    <header>
+        <div class="hearwrap">
+            <div class="btn-wrap">
+                <button>默认排序</button>
+                <button>按价格升序排序</button>
+                <button>按价格降序排序</button>
+            </div>
+        </div>
+    </header>
+    <!-- 渲染数据的结构 -->
+    <div class="list">
+        <ul>
 
-            <a href="#tab66" style="background-color:#7976ab" class="">诛仙3</a>
-
-            <a href="#tab67" style="background-color:#7976ab" class="">诛仙手游</a>
-
-            <a href="#tab70" style="background-color:#7976ab" class="">赤壁</a>
-
-            <a href="#tab68" style="background-color:#7976ab" class="curr">其他</a>
-
-        </p>
-        <p class="code"><img src="http://static.wanmei.com/shop/images/code.jpg" width="118" height="118"></p>
-        <div class="tip">
-            <p class="p1">扫码关注</p>
-            <p class="p2">完美世界商城微博</p>
-            <p class="p3">参与免费抽奖</p>
+        </ul>
+    </div>
+    <!-- 分页的结构 -->
+    <div class="pagelist">
+        <div class="m-style page">
         </div>
     </div>
-
+    <footer></footer>
 
 </body>
 
