--- a/src/detail.html
+++ b/src/detail.html
@@ -4,12 +4,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>详情</title>
+    <link rel="stylesheet" href="./css/detail.css">
     <script src="script/require.js" data-main="script/main.js" defer async="true" id="currentpage" data-page="detail_module"></script>
 </head>
 
 <body>
-    详情页
+    <!-- 头信息 -->
+    <div class="header">
+        <div class="wrap">
+            <span class="welcome">欢迎来到完美世界周边商城！</span>
+            <div class="header-cart">
+                <a href="cart.html" class="text"><span class="icon"></span>购物车（<span class="cartNum">0</span>）</a>
+                <!--//js <div class="cart_list"></div> -->
+            </div>
+            <dl>
+                <dt><a href="#" class="">我的订单</a></dt>
+                <dd><a href="#" class="">我的关注</a></dd>
+            </dl>
+            <dl class="userlogin">
+                <dt><a href="login.html" class="">登录</a></dt>
+                <dd><a href="registry.html" target="_blank">注册</a></dd>
+            </dl>
+        </div>
+    </div>
+    <!-- 顶部导航 -->
+    <div class="top_nav">
+        <div class="wrap cf">
+            <a href="#" class="f_left logo logo_wm"><img src="http://static.wanmei.com/shop/images/logo_wm.png" width="120" height="41" alt="" title="完美商城"></a>
+            <a href="#" class="f_left logo logo_shop"><img src="http://static.wanmei.com/shop/images/logo_shop.png" width="55" height="27" alt="" title="完美商城"></a>
+            <div class="f_left all_wares">
+                <p class="text"><span></span>全部商品</p>
+                <ul>
+                    <li>
+                        <a href="list.html" class="ellipsis2" target="_blank" title="DOTA2神秘商店">DOTA2神秘商店<em></em></a>
+                        <dl>
+                            <dd><a href="#">手办扭蛋</a></dd>
+                            <dd><a href="#">创意T恤</a></dd>
+                            <dd><a href="#">焕新服饰</a></dd>
+                            <dd><a href="#">生活用品</a></dd>
+                            <dd><a href="#">毛绒合辑</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <a href="list.html" target="_blank" class="ellipsis2">完美世界周边<em></em></a>
+                        <dl>
+                            <dd><a href="#">梦间集周边</a></dd>
+                            <dd><a href="#">诛仙3专区</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <a href="list.html" target="_blank" class="ellipsis2">CSGO正版周边<em></em></a>
+                    </li>
+                    <li>
+                        <a href="list.html" target="_blank" class="ellipsis2">姜小虎系列周边<em></em></a>
+                    </li>
+                    <li>
+                        <a href="list.html" target="_blank" class="ellipsis2">游戏外设<em></em></a>
+                        <dl>
+                            <dd><a href="#">键盘</a></dd>
+                            <dd><a href="#">鼠标</a></dd>
+                            <dd><a href="#">耳机</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <a href="#">神魔大陆手游<em></em></a>
+                    </li>
+                    <li>
+                        <a href="#">手作<em></em></a>
+                        <dl>
+                            <dd><a href="#">可家手作</a></dd>
+                            <dd><a href="#">予礼</a></dd>
+                            <dd><a href="#">kris</a></dd>
+                            <dd><a href="#">玩皮工作室</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+            <ul class="nav f_left">
+                <li><a href="#">首页</a></li>
+                <li><a href="#" target="_blank">完美世界周边</a></li>
+                <li><a href="http://secretshop.dota2.com.cn/" target="_blank">DOTA2专区</a></li>
+                <li><a href="/faq" target="_blank">FAQ</a></li>
+            </ul>
+
+            <div class="f_right header_search">
+                <form action="" method="get" class="formsearch">
+                    <input type="text" class="text">
+                    <input type="button" class="btn">
+                    <span class="keyword">
+                        <a href="list.html" class="tj_link" target="_blank">武林手机支架</a>
+                    </span>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- small导航 -->
+    <div class="nav_bar">
+        <div class="wrap">
+            <a href="index.html">首页</a> &gt; <a href="detail.html">商品详情</a>
+        </div>
+    </div>
+    <!--  -->
+    <div class="detail">
+        <div class="left-p">
+            <div class="pic-wrap">
+                <div class="big-p">
+                    <img src="" alt="" id="smallpic">
+                    <div id="sf"></div>
+                </div>
+                <div id="bf">
+                    <img src="" alt="" id="bpic">
+                </div>
+                <a href="javascript:;" id="left">&lt;</a>
+                <ul class="s-p">
+
+                </ul>
+                <a href="javascript:;" id="right">&gt;</a>
+            </div>
+        </div>
+        <div class="right-con">
+            <div class="content">
+                <h3 class="title"></h3>
+                <div class="price-wrap">
+                    <span class="j">淘宝价</span>
+                    <div class="price-out">
+                        <strong class="p-style">
+                            <span class="dol">￥</span>
+                            <i class="price"></i>
+                        </strong>
+                    </div>
+                </div>
+                <div class="amount">
+                    <span class="n">数量</span>
+                    <input type="text" id="count" value="1">
+                </div>
+                <div class="buyAndadd">
+                    <div class="buy-btn">
+                        <a href="cart.html">立即购买</a>
+                    </div>
+                    <div class="add-btn">
+                        <a href="javascript:;">加入购物车</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
