--- a/src/login.html
+++ b/src/login.html
@@ -4,19 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录</title>
+    <meta name="description" content="淘宝网(Taobao.com)作为专业的购物网站拥有全球时尚前沿的消费者购物集市,100%认证网上商城及超值二手商品区，同时购物安全，产品丰富，应有尽有,任你选购,让你尽享网上在线购物乐趣！" />
+    <meta name="keywords" content="淘宝,掏宝,网上购物,C2C,在线交易,交易市场,网上交易,交易市场,网上买,网上卖，购物网站,团购,网上贸易,安全购物,电子商务,放心买,供应,买卖信息,网店,一口价,拍卖,网上开店,网络购物,打折,免费开店,网购,频道,店铺" />
+    <link rel="shortcut icon" href="../src/img/title.icon.png">
+    <link rel="stylesheet" href="../src/css/login.css">
     <script src="script/require.js" data-main="script/main.js" defer async="true" id="currentpage" data-page="login_module"></script>
 </head>
 
 <body>
-    <fieldset style="width:800px;margin:0 auto;">
-        <legend>用户登录</legend>
-        <form action="">
-            <p><label for="">用户姓名：</label><input type="text" class="username"></p>
-            <p><label for="">用户密码：</label><input type="password" class="password"></p>
-            <p><input type="button" value="用户登录" class="btn"> <a href="registry.html">用户注册</a></p>
-        </form>
+    <!-- header -->
+    <div class="topbar-register cl">
+        <h1 class="fl logo fl">
+            <a target="_blank" href="http://www.wanmei.com/"><img src="https://safestatic.games.wanmei.com/passport/reg/images/logo.png" alt=""></a>
+        </h1>
+    </div>
+    <!-- form -->
+    <fieldset style="border: 0;">
+        <div class="wrap" id="wrap">
+            <div class="logGet">
+                <div class="logD logDtip">
+                    <p class="p1">登录</p>
+                </div>
+                <form action="" id="registry">
+                    <div class="lgD">
+                        <input type="text" class="username" placeholder="输入用户名" />
+                    </div>
+                    <div class="lgD">
+                        <input type="password" class="password" placeholder="输入用户密码" />
+                    </div>
+                    <div class="logC">
+                        <a href="index.html" target="_self"><input type="button" value="登录" class="submit"></a>
+                    </div>
+                    <a href="registry.html" style="float: right ;margin:20px 20px;">免费注册</a>
+                </form>
+            </div>
+        </div>
     </fieldset>
+    <footer>
+        <div class="copyright">
+            <div class="wrap">
+                <ul>
+                    <li><a href="#">公司介绍</a></li>
+                    <li><a href="#">开发团队</a></li>
+                    <li><a href="#">招聘信息</a></li>
+                    <li><a href="#">联系我们</a></li>
+                    <li style="width: 110px"><a href="#">完美世界隐私政策</a></li>
+                    <li style="width: 110px"><a href="#">完美世界用户协议</a></li>
+                    <li style="width: 110px"><a href="#">完美商城服务协议</a></li>
+                    <li style="width: 75px"><a href="#">Cookie政策</a></li>
+                    <li><a href="#">纠纷处理</a></li>
+                    <li><a href="#">网站地图</a></li>
+                </ul>
+                <p class="text">
+                    京ICP证：050016号 <a href="#">营业执照</a> 《网络文化经营许可证》编号：文网文【2017】8929-1007号《网络视听许可证》编号：0110587 京公网安备11010502033859号
+                    <br> ©完美世界 版权所有　Perfect World. All Rights Reserved.
+                </p>
+                <div class="link">
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright01.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright02.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright03.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright04.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright05.jpg"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
