--- a/src/registry.html
+++ b/src/registry.html
@@ -4,21 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>账户注册</title>
+    <link rel="shortcut icon" href="../src/img/title.icon.png">
+    <link rel="stylesheet" href="../src/css/registry.css">
     <script src="script/require.js" data-main="script/main.js" defer async="true" id="currentpage" data-page="registry_module"></script>
 </head>
 
 <body>
-    <fieldset style="width:800px;margin:0 auto;">
-        <legend>用户注册</legend>
-        <form action="http://192.168.13.66/projectname/php/registry.php" method="post">
-            <p><label for="">用户姓名：</label><input type="text" name="username" class="username"><span></span></p>
-            <p><label for="">用户密码：</label><input type="password" name="password"></p>
-            <p><label for="">确认密码：</label><input type="password" name="repass"></p>
-            <p><label for="">用户邮箱：</label><input type="text" name="email"></p>
-            <p><input type="submit" value="用户注册" name="submit"></p>
-        </form>
-    </fieldset>
+    <div class="topbar-register cl">
+        <h1 class="fl logo fl">
+            <a target="_blank" href="http://www.wanmei.com/"><img src="https://safestatic.games.wanmei.com/passport/reg/images/logo.png" alt=""></a>
+        </h1>
+    </div>
+    <form action=" http://localhost/xiangmu/projectname/php/registry.php" method="POST" id="registry">
+        <fieldset style="border: 0;">
+            <legend style=" color: #555;font-size: 25px;margin-bottom: 20px;">欢迎注册</legend>
+            <p>
+                <label for="text">用户名</label>
+                <input type="text" placeholder="你的账号名和登录名" class="username" name="username">
+                <span></span>
+                <i></i>
+            </p>
+            <p>
+                <label for="text">密码</label>
+                <input type="password" placeholder="建议至少使用两种字符组合" class="password" name="password">
+                <span></span>
+                <i></i>
+            </p>
+            <p>
+                <label for="text">邮箱</label>
+                <input type="text" placeholder="请再次输入" class="email" name="email">
+                <span></span>
+                <i></i>
+            </p>
+            <p style="border: none;">
+                <input type="submit" placeholder="请再次输入" class="button" name="submit">
+            </p>
+        </fieldset>
+    </form>
+    <footer>
+        <!-- 版权 -->
+        <div class="copyright">
+            <div class="wrap">
+                <ul>
+                    <li><a href="#">公司介绍</a></li>
+                    <li><a href="#">开发团队</a></li>
+                    <li><a href="#">招聘信息</a></li>
+                    <li><a href="#">联系我们</a></li>
+                    <li style="width: 110px"><a href="#">完美世界隐私政策</a></li>
+                    <li style="width: 110px"><a href="#">完美世界用户协议</a></li>
+                    <li style="width: 110px"><a href="#">完美商城服务协议</a></li>
+                    <li style="width: 75px"><a href="#">Cookie政策</a></li>
+                    <li><a href="#">纠纷处理</a></li>
+                    <li><a href="#">网站地图</a></li>
+                </ul>
+                <p class="text">
+                    京ICP证：050016号 <a href="#">营业执照</a> 《网络文化经营许可证》编号：文网文【2017】8929-1007号《网络视听许可证》编号：0110587 京公网安备11010502033859号
+                    <br> ©完美世界 版权所有　Perfect World. All Rights Reserved.
+                </p>
+                <div class="link">
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright01.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright02.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright03.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright04.jpg"></a>
+                    <a href="#"><img src="http://static.wanmei.com/shop/images/copyright05.jpg"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
